@@ -4,8 +4,7 @@
 #
 #############################################################
 
-KISMET_VERSION = 2009-06-R1
-KISMET_SOURCE = kismet-$(KISMET_VERSION).tar.gz
+KISMET_VERSION = 2010-01-R1
 KISMET_SITE = http://www.kismetwireless.net/code
 KISMET_DEPENDENCIES = libpcap ncurses
 
@@ -35,7 +34,9 @@ $(eval $(call AUTOTARGETS,package,kismet))
 $(KISMET_TARGET_INSTALL_TARGET):
 	$(call MESSAGE,"Installing")
 	$(INSTALL) -m 755 $(addprefix $(KISMET_DIR)/, $(KISMET_TARGET_BINARIES)) $(TARGET_DIR)/usr/bin
+ifdef KISMET_TARGET_CONFIGS
 	$(INSTALL) -m 644 $(addprefix $(KISMET_DIR)/conf/, $(KISMET_TARGET_CONFIGS)) $(TARGET_DIR)/etc
+endif
 ifeq ($(BR2_ENABLE_DEBUG),)
 	$(STRIPCMD) $(STRIP_STRIP_ALL) $(addprefix $(TARGET_DIR)/usr/bin/, $(KISMET_TARGET_BINARIES))
 endif
@@ -44,5 +45,7 @@ endif
 $(KISMET_TARGET_UNINSTALL):
 	$(call MESSAGE,"Uninstalling")
 	rm -f $(addprefix $(TARGET_DIR)/usr/bin/, $(KISMET_TARGET_BINARIES))
+ifdef KISMET_TARGET_CONFIGS
 	rm -f $(addprefix $(TARGET_DIR)/etc/, $(KISMET_TARGET_CONFIGS))
+endif
 	rm -f $(KISMET_TARGET_INSTALL_TARGET) $(KISMET_HOOK_POST_INSTALL)
